# DGtalTools

./: CMakeLists.txt
estimators/: 2dContourAnalysis.cpp  3d-cnc-script.sh  3d-fcnc.cpp  3d-mesh-cnc-stable.cpp  3d-mesh-cnc.cpp  3dLocalEstimators.cpp  CMakeLists.txt  CorrectedNormalCurrentComputer.h  CorrectedNormalCurrentComputer.ih  CorrectedNormalCurrentFormula.h  EstimatorHelpers.h  FastCorrectedNormalCurrent.h  NormalCycleComputer.h  NormalCycleComputer.ih  NormalCycleFormula.h  RusinkiewiczCurvatureFormula.h  SimplifiedMesh.h  SimplifiedMesh.ih  measure-normals.cpp
imageProcessing/: ATu0v1.h  ATu0v1.ih  ATu0v11.h  ATu0v11.ih  ATu2v0.h  ATu2v0.ih  ATu2v00.h  ATu2v00.ih  CMakeLists.txt  DECImageHelpers.h  at-u0-v1.cpp  at-u2-v0.cpp  at-u2-v00.cpp  tensor-tests.cpp
shapeGenerator/: CMakeLists.txt  samplePolynomialSurface.cpp
visualisation/: 3dCurvatureViewer.cpp  3dVolRayTracer.cpp
visualisation/raytracer/: DigitalVolume.h  GeometricalObject.h  ImplicitDigitalVolume.h  Parallelogram.cpp  Parallelogram.h  PeriodicPlane.cpp  PeriodicPlane.h  RayIntersection.h  RayTracerViewerExtension.cpp  RayTracerViewerExtension.h  Renderer.h  Scene.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  WaterPlane.cpp  WaterPlane.h
volumetric/: CMakeLists.txt  NormalEstimation.h  volAntiAliasing.cpp
